Add vim and git

--- a/playbooks/roles/terminal_env/tasks/main.yml
+++ b/playbooks/roles/terminal_env/tasks/main.yml
@@ -4,6 +4,6 @@
   include_tasks: "{{ item }}"
   loop:
     - shell.yml
-    # - vim.yml
-    # - git.yml
+    - vim.yml
+    - git.yml
     # - kubernetes.yml
