Add docker-install script cleanup

--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -22,3 +22,8 @@
     append: yes
     groups:
     - docker
+
+- name: Clean up
+  ansible.builtin.file:
+    path: ~/docker-install
+    state: absent
