Enable docker when WSL started

--- a/playbooks/roles/docker/tasks/main.yml
+++ b/playbooks/roles/docker/tasks/main.yml
@@ -23,6 +23,11 @@
     groups:
     - docker
 
+- name: Start docker service
+  ansible.builtin.copy:
+    src: "docker-service.zsh"
+    dest: "~/.oh-my-zsh/custom/"
+
 - name: Clean up
   ansible.builtin.file:
     path: ~/docker-install
