Install and enable keychain

--- a/playbooks/roles/terminal_env/tasks/shell.yml
+++ b/playbooks/roles/terminal_env/tasks/shell.yml
@@ -43,6 +43,7 @@
     - keychain
     - fzf
     - fd-find
+    - keychain
 
 - name: Create ZSH bd plugin directory
   become_user: "{{ env_user }}"
