Install dotnet dev

--- a/playbooks/roles/terminal_env/tasks/git.yml
+++ b/playbooks/roles/terminal_env/tasks/git.yml
@@ -12,6 +12,7 @@
 - name: Install diff-so-fancy
   become: yes
   ansible.builtin.apt:
+    update_cache: yes
     name: diff-so-fancy
 
 - name: Copy gitconfig
